# evm-ninja

./: .gitignore  README.md  __init__.py  cfg.py  classes.py  constants.py  disas.py  evm.py  evm_instructions.py  hashes_lib.py  interval3.py  plugin.json  pyproject.toml  requirements.txt  smt.py  utils.py  vsa.py
examples/: breadth_first.py
tests/: basic_add.vy  toy_smt_evm.py
