[tool.poetry]
name = "evm-ninja"
version = "0.1.0"
description = ""
authors = ["pat <patoche@biensepasser.org>"]
readme = "README.md"
packages = [{include = "evm_ninja"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
# See https://beta.ruff.rs/docs/rules/#flake8-simplify-sim
select = ["E", "F", "B", "W", "I", "N", "UP", "YTT", "ANN", "ASYNC", "S", "A", "COM", "C4", "ISC", "ICN", "PIE", "Q", "RET", "SIM"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "interval3.py",
]
include = ["*.py", "*.pyi", "**/pyproject.toml", "*.ipynb"]
per-file-ignores = {}

# Same as Black.
line-length = 150

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

target-version = "py311"
